force-app/main/default/objects/Evento_de_Envelope__c/Evento_de_Envelope__c.object-meta.xml
<CustomObject>
    <label>Evento de Envelope</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Número do Evento de Envelope</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eventos de Envelope</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>