force-app/main/default/objects/Evento_de_Envelope__c/fields/DocuSign_Envelope__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DocuSign Envelope</label>
    <referenceTo>dfsle__Envelope__c</referenceTo>
    <relationshipLabel>Eventos de Envelope</relationshipLabel>
    <relationshipName>Eventos_de_Envelope</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>