force-app/main/default/objects/Evento_de_Envelope__c/fields/eventData__c.field-meta.xml
<CustomField>
    <fullName>eventData__c</fullName>
    <label>Dados do Evento</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>