force-app/main/default/objects/Evento_de_Envelope__c/fields/sourceId__c.field-meta.xml
<CustomField>
    <fullName>sourceId__c</fullName>
    <label>ID do Objeto Fonte</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>