force-app/main/default/objects/Evento_de_Envelope__c/fields/sourceObject__c.field-meta.xml
<CustomField>
    <fullName>sourceObject__c</fullName>
    <label>Nome do Objeto Fonte</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>